I should use git
